changes to dockerFile config

--- a/examples/env.example
+++ b/examples/env.example
@@ -1,6 +1,6 @@
 # Uncomment for a production deployment.
 #   That is, use of gunicorn instead of a debug python server
-#DEPLOYMENT='PROD'
+DEPLOYMENT='PROD'
 
 # Database Variables
 DB_USER='dhub'
@@ -9,14 +9,12 @@ DB_HOST='localhost'
 DB_DATABASE='devicehub'
 SCHEMA='dbtest'
 DB_SCHEMA='dbtest'
-DEPLOYMENT='DEV'
-FLASK_DEBUG='True'
 
 DEVICEHUB_HOST='http://localhost:5000'
 HOST='localhost'
 
-EMAIL_DEMO='user@example.com'
-PASSWORD_DEMO='1234'
+EMAIL_DEMO='usuario@ekoa.com'
+PASSWORD_DEMO='ekoa'
 
 JWT_PASS='aaaa'
 SECRET_KEY='aaaa'
