--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,14 +8,13 @@ services:
       context: .
       dockerfile: docker/devicehub.Dockerfile
     environment:
-      - FLASK_DEBUG=${FLASK_DEBUG}
       - DB_USER=${DB_USER}
       - DB_PASSWORD=${DB_PASSWORD}
       - DB_HOST=postgres
       - DB_DATABASE=${DB_DATABASE}
       - HOST=${HOST}
-      - EMAIL_DEMO=${EMAIL_DEMO}
-      - PASSWORD_DEMO=${PASSWORD_DEMO}
+      - EMAIL_DEMO=usuario@ekoa.com
+      - PASSWORD_DEMO=ekoa
       - JWT_PASS=${JWT_PASS}
       - SECRET_KEY=${SECRET_KEY}
       - DEVICEHUB_HOST=${DEVICEHUB_HOST}
@@ -24,8 +23,8 @@ services:
     ports:
       - 5000:5000
     volumes:
-      - app:/opt/devicehub:rw
       - shared:/shared:rw
+      - app:/opt/devicehub:rw
     depends_on:
       - postgres
 
@@ -44,8 +43,8 @@ services:
     volumes:
       - pg_data:/var/lib/postgresql/data
     # DEBUG
-    ports:
-      - 5432:5432
+    #ports:
+    # - 5432:5432
 
   nginx:
     container_name: devicehub_web
