--- a/examples/env.example
+++ b/examples/env.example
@@ -21,3 +21,5 @@ SECRET_KEY='aaaa'
 
 # If you have a URL_MANUALS implementation, please change this url
 URL_MANUALS='http://localhost:4000'
+
+BACKUP_PATH=./backups
